fix(Add New Link): Make Add New Link visible
- Change the color of the add new link to black
- Change the onhover color of the add new link to white

[Fixex #152545563]

--- a/client/scss/main.scss
+++ b/client/scss/main.scss
@@ -254,4 +254,11 @@ body {
   padding-top: 15px;
 }
 
+a.add-new {
+  color: black;
+}
+
+a.add-new:hover {
+  color: aliceblue;
+}
 
